Updated file list to get only wanted files

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ secrets.ipynb
 secretsPaul.py
 secretsPaul.ipynb
 .ipynb_checkpoints/secretsPaul-checkpoint.ipynb
+Data Loading/secretsPatrick.py
+Data Loading/__pycache__/secretsPatrick.cpython-38.pyc
+Data Loading/__pycache__/secretsPaul.cpython-38.pyc
