--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,8 +1,12 @@
-streamlit
-pandas
-altair
-wordcloud
-matplotlib
-numpy
-pymysql
-sqlalchemy
+altair==4.2.0
+matplotlib==3.6.2
+nltk==3.8.1
+numpy==1.23.5
+pandas==1.4.4
+plotly==5.13.0
+PyMySQL==1.0.2
+scikit_learn==1.2.2
+SQLAlchemy==1.4.46
+streamlit==1.20.0
+vaderSentiment==3.3.2
+wordcloud==1.8.2.2
